objects/zkups__QueuedShipment__c.object
<CustomObject>
    <fields>
        <fullName>zkups__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UPS Queued Shipments</relationshipLabel>
        <relationshipName>UPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__BulkShipment__c</fullName>
        <label>Bulk Shipment</label>
        <referenceTo>zkups__BulkShipment__c</referenceTo>
        <relationshipLabel>UPS Queued Shipments</relationshipLabel>
        <relationshipName>UPS_Queued_Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkups__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UPS Queued Shipments</relationshipLabel>
        <relationshipName>UPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__CostCenter__c</fullName>
        <label>CostCenter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CustomAddressSourceRecordId__c</fullName>
        <label>Custom Address Source Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CustomAddressSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Address Source</label>
        <referenceTo>zkups__CustomAddressSource__c</referenceTo>
        <relationshipLabel>UPS Queued Shipments</relationshipLabel>
        <relationshipName>UPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__DutiesAccountPostalCode__c</fullName>
        <label>Duties Account Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DutiesPaymentType__c</fullName>
        <label>Duties/Taxes/Fees Payment Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DutiesPayorAccountCountry__c</fullName>
        <label>Duties Payor Account Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DutiesPayorAccountPostalCode__c</fullName>
        <label>Duties Payor Account Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DutiesPayorAccount__c</fullName>
        <label>Duties Payor Account</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__EmailMessage__c</fullName>
        <label>Email Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__EmailNotifyOnDeliveryAlso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__EmailNotifyOnExceptionAlso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__EmailRecipient1__c</fullName>
        <label>Email Recipient 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__EmailRecipient2__c</fullName>
        <label>Email Recipient 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__EmailRecipient3__c</fullName>
        <label>Email Recipient 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__EntryNumber__c</fullName>
        <label>Entry Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__FirstReferenceType__c</fullName>
        <label>First Reference Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable Customer Account</fullName>
                </value>
                <value>
                    <fullName>Appropriation Number</fullName>
                </value>
                <value>
                    <fullName>Bill of Lading Number</fullName>
                </value>
                <value>
                    <fullName>Collect on Delivery (COD) Number</fullName>
                </value>
                <value>
                    <fullName>Dealer Order Number</fullName>
                </value>
                <value>
                    <fullName>Department Number</fullName>
                </value>
                <value>
                    <fullName>FDA Product Code</fullName>
                </value>
                <value>
                    <fullName>Invoice Number</fullName>
                </value>
                <value>
                    <fullName>Manifest Key Number</fullName>
                </value>
                <value>
                    <fullName>Model Number</fullName>
                </value>
                <value>
                    <fullName>Part Number</fullName>
                </value>
                <value>
                    <fullName>Production Code</fullName>
                </value>
                <value>
                    <fullName>Purchase Order Number</fullName>
                </value>
                <value>
                    <fullName>Purchase Request Number</fullName>
                </value>
                <value>
                    <fullName>Return Authorization Number</fullName>
                </value>
                <value>
                    <fullName>Salesperson Number</fullName>
                </value>
                <value>
                    <fullName>Serial Number</fullName>
                </value>
                <value>
                    <fullName>Store Number</fullName>
                </value>
                <value>
                    <fullName>Transaction Reference Number</fullName>
                </value>
                <value>
                    <fullName>Employer&apos;s ID Number</fullName>
                </value>
                <value>
                    <fullName>Federal Taxpayer ID No.</fullName>
                </value>
                <value>
                    <fullName>Social Security Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__FirstReferenceValue__c</fullName>
        <label>First Reference Value</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__LabelImageType__c</fullName>
        <label>Label Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GIF</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6 - EPL2</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6 - ZPL</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x8 - EPL2</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x8 - ZPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>UPS Queued Shipments</relationshipLabel>
        <relationshipName>UPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>UPS Queued Shipments</relationshipLabel>
        <relationshipName>UPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__PackageId__c</fullName>
        <label>PackageId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PackagingType__c</fullName>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UPS Letter</fullName>
                </value>
                <value>
                    <fullName>UPS Small Express Box</fullName>
                </value>
                <value>
                    <fullName>UPS Medium Express Box</fullName>
                </value>
                <value>
                    <fullName>UPS Large Express Box</fullName>
                </value>
                <value>
                    <fullName>UPS PAK</fullName>
                </value>
                <value>
                    <fullName>UPS Tube</fullName>
                </value>
                <value>
                    <fullName>Your Packaging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sender</fullName>
                </value>
                <value>
                    <fullName>Recipient</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__PayorAccountCountry__c</fullName>
        <label>Payor Account Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PayorAccountPostalCode__c</fullName>
        <label>Payor Account Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PayorAccount__c</fullName>
        <label>Payor Account</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__QueuedShipmentSpecialServices__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Queued Shipment Special Services</label>
        <referenceTo>zkups__QueuedShipmentSpecialServices__c</referenceTo>
        <relationshipLabel>UPS Queued Shipments</relationshipLabel>
        <relationshipName>UPS_Queued_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientCity__c</fullName>
        <label>Recipient City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientCompany__c</fullName>
        <label>Recipient Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientCountry__c</fullName>
        <label>Recipient Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientEmail__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientIsResidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientName__c</fullName>
        <label>Recipient Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientPhone__c</fullName>
        <label>Recipient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientPostalCode__c</fullName>
        <label>Recipient Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientState__c</fullName>
        <label>Recipient State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientStreet__c</fullName>
        <label>Recipient Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnDescription__c</fullName>
        <label>Return Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnType__c</fullName>
        <label>Return Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic Return Label</fullName>
                </value>
                <value>
                    <fullName>Print Return Label</fullName>
                </value>
                <value>
                    <fullName>Print and Mail</fullName>
                </value>
                <value>
                    <fullName>Return Service 1 Attempt</fullName>
                </value>
                <value>
                    <fullName>Return Service 3 Attempts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__SecondReferenceType__c</fullName>
        <label>Second Reference Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable Customer Account</fullName>
                </value>
                <value>
                    <fullName>Appropriation Number</fullName>
                </value>
                <value>
                    <fullName>Bill of Lading Number</fullName>
                </value>
                <value>
                    <fullName>Collect on Delivery (COD) Number</fullName>
                </value>
                <value>
                    <fullName>Dealer Order Number</fullName>
                </value>
                <value>
                    <fullName>Department Number</fullName>
                </value>
                <value>
                    <fullName>FDA Product Code</fullName>
                </value>
                <value>
                    <fullName>Invoice Number</fullName>
                </value>
                <value>
                    <fullName>Manifest Key Number</fullName>
                </value>
                <value>
                    <fullName>Model Number</fullName>
                </value>
                <value>
                    <fullName>Part Number</fullName>
                </value>
                <value>
                    <fullName>Production Code</fullName>
                </value>
                <value>
                    <fullName>Purchase Order Number</fullName>
                </value>
                <value>
                    <fullName>Purchase Request Number</fullName>
                </value>
                <value>
                    <fullName>Return Authorization Number</fullName>
                </value>
                <value>
                    <fullName>Salesperson Number</fullName>
                </value>
                <value>
                    <fullName>Serial Number</fullName>
                </value>
                <value>
                    <fullName>Store Number</fullName>
                </value>
                <value>
                    <fullName>Transaction Reference Number</fullName>
                </value>
                <value>
                    <fullName>Employer&apos;s ID Number</fullName>
                </value>
                <value>
                    <fullName>Federal Taxpayer ID No.</fullName>
                </value>
                <value>
                    <fullName>Social Security Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__SecondReferenceValue__c</fullName>
        <label>Second Reference Value</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderCity__c</fullName>
        <label>Sender City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderCompany__c</fullName>
        <label>Sender Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderCountry__c</fullName>
        <label>Sender Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderEmail__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__SenderIsResidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sender Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__SenderName__c</fullName>
        <label>Sender Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderPhone__c</fullName>
        <label>Sender Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkups__SenderPostalCode__c</fullName>
        <label>Sender Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderState__c</fullName>
        <label>Sender State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderStreet__c</fullName>
        <label>Sender Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__ServiceType__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic: UPS Next Day Air Early A.M.</fullName>
                </value>
                <value>
                    <fullName>Domestic: UPS Next Day Air</fullName>
                </value>
                <value>
                    <fullName>Domestic: UPS Next Day Air Saver</fullName>
                </value>
                <value>
                    <fullName>Domestic: UPS 2nd Day Air A.M.</fullName>
                </value>
                <value>
                    <fullName>Domestic: UPS 2nd Day Air</fullName>
                </value>
                <value>
                    <fullName>Domestic: UPS 3 Day Select</fullName>
                </value>
                <value>
                    <fullName>Domestic: UPS Ground</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__ShipmentDescription__c</fullName>
        <label>Description of Goods</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__USPSEndorsement__c</fullName>
        <label>USPS Endorsement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__WeightDimensionUnits__c</fullName>
        <label>Weight/Dimension Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LB / IN</fullName>
                </value>
                <value>
                    <fullName>KG / CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>UPS Queued Shipment</label>
    <nameField>
        <displayFormat>Queued-Shipment-{00000000}</displayFormat>
        <label>Queued Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Queued Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>